# demo_openWhisk

./: .gitignore  README.md
demo_openwhisk/: Cargo.toml  deploy.sh
demo_openwhisk/src/core/: alarm_repository.rs  common.rs  log_repository.rs  mod.rs  models.rs
front/: package-lock.json  package.json  serverless.yml
front/public/: index.html  manifest.json
front/src/: App.css  App.js
front/src/components/: Chart.js  Gauge.js  imageSwitch.js  tanks.js
mock_data/: Cargo.toml
mock_data/src/: main.rs
