[package]
name = "demo_openwhisk"
version = "0.1.0"
authors = ["Roberto Diaz <roberto@theagilemonkeys.com>"]

[lib]
name = "core"
path = "src/core/mod.rs"

[dependencies]
rusoto_core = "0.33"
rusoto_dynamodb = "0.33"
chrono = "0.4"
time = "0.1.40"
uuid = { version = "0.7", features = ["v4"] }
rustc-serialize = "0.3"
openssl-probe = "0.1.2"
reqwest = "0.9.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"